# MagicCap

./: .dockerignore  .eslintrc.js  .gitignore  .goreleaser.yml  .ironfist.json  .travis.yml  Dockerfile.build  Dockerfile.lint  Makefile  README.md  SUPPORT.md  build_assets.go  cdn_pusher.go  copy_certificate.sh  create-link-deps.js  crowdin.yml  docker_build.sh  docker_lint.sh  dump.pprof  dylan.md  entrypoint.go  go.mod  go.sum  linux_build_docker.sh  linux_build_local.sh  mac_build.sh  minify_dist.js  monkeypatch_gui_dist.js  package-lock.json  package.json  release.sh  static_copy.js  test.prof  tsconfig.json
.circleci/: config.yml
.github/: FUNDING.yml
assets/: build_assets.go  fetch_uploaders_kernel_json.go  (+1 more)
core/platform_specific/: CMakeLists.txt  application_loop_darwin.go  application_loop_linux.go  clipboard_darwin.go  clipboard_darwin.h  clipboard_darwin.m  clipboard_linux.go  clipboard_shared.go  hotkeys_darwin.go  hotkeys_darwin.h  hotkeys_darwin.m  hotkeys_linux.go  hotkeys_shared.go  mainthread_darwin.go  mainthread_darwin.m  mainthread_linux.go  mainthread_other.go  notification_darwin.go  notification_darwin.h  notification_darwin.m  notification_linux.go  nsapplication_darwin.go  nsapplication_darwin.h  nsapplication_darwin.m  tray_darwin.go  tray_darwin.h  tray_darwin.m  tray_linux.go  webview_darwin.go  webview_darwin.h  webview_darwin.m  webview_linux.go
core/platform_specific/headers/MASShortcut/: MASDictionaryTransformer.h  MASShortcut.h  MASShortcutBinder.h  MASShortcutMonitor.h  MASShortcutValidator.h  MASShortcutView+Bindings.h
(+510 files in other folders)
